--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,6 @@ def kotlin_version = "1.3.50"
 
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
-
 repositories {
     jcenter()
     mavenCentral()
@@ -30,6 +28,7 @@ dependencies {
     compile group: "org.http4k", name: "http4k-core", version: "3.177.0"
     compile group: "org.http4k", name: "http4k-server-jetty", version: "3.177.0"
     compile group: "org.http4k", name: "http4k-client-okhttp", version: "3.177.0"
+    compile group: "org.http4k", name: "http4k-format-jackson", version: "3.180.0"
 }
 
 compileKotlin {
