--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.41'
+    id 'application'
 }
 
 def spek_version = "2.0.6"
@@ -40,4 +41,8 @@ compileTestKotlin {
 
 test {
     useJUnitPlatform()
+}
+
+application {
+    mainClassName = "MainKt"
 }
