--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.41'
+    id 'application'
 }
 
 def spek_version = "2.0.6"
@@ -29,6 +30,10 @@ dependencies {
     compile group: "org.http4k", name: "http4k-server-jetty", version: "3.177.0"
     compile group: "org.http4k", name: "http4k-client-okhttp", version: "3.177.0"
     compile group: "org.http4k", name: "http4k-format-jackson", version: "3.180.0"
+}
+
+application {
+    mainClassName = "MainKt"
 }
 
 compileKotlin {
