--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     testRuntimeOnly "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation "io.mockk:mockk:1.9.3"
 
     testCompile "com.willowtreeapps.assertk:assertk-jvm:0.19"
 
