--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
-    id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.41'
-    id 'application'
+    id('java')
+    id('org.jetbrains.kotlin.jvm').version('1.3.41')
+    id("com.google.cloud.tools.jib").version("1.4.0")
+    id('application')
 }
 
 def spek_version = "2.0.6"
@@ -16,13 +17,13 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    testImplementation "org.spekframework.spek2:spek-dsl-jvm:$spek_version"
     testRuntimeOnly "org.spekframework.spek2:spek-runner-junit5:$spek_version"
 
     // spek requires kotlin-reflect, can be omitted if already in the classpath
     testRuntimeOnly "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation "org.spekframework.spek2:spek-dsl-jvm:$spek_version"
     testImplementation "io.mockk:mockk:1.9.3"
 
     testCompile "com.willowtreeapps.assertk:assertk-jvm:0.19"
@@ -35,6 +36,22 @@ dependencies {
 
 application {
     mainClassName = "MainKt"
+}
+
+jib {
+    container {
+        mainClass = application.mainClassName
+    }
+    from {
+        image = "azul/zulu-openjdk-alpine:12"
+    }
+    to {
+        image = "hives/beer-api"
+        auth {
+            username = 'hives'
+            password = System.getenv("DOCKER_IO_PASSWORD")
+        }
+    }
 }
 
 compileKotlin {
