--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,21 +1,21 @@
 stages:
   - build
 
-#.gradle-image: &gradle-image
-#  image: gradle:5.5-jdk12
-#
-#.dind-service: &dind-service
-#  services:
-#    - docker:17.09.0-ce-dind
+.gradle-image: &gradle-image
+  image: gradle:5.5-jdk12
+
+.dind-service: &dind-service
+  services:
+    - docker:17.09.0-ce-dind
 
 build:
-#  <<: *gradle-image
-#  <<: *dind-service
+  <<: *gradle-image
+  <<: *dind-service
   stage: build
   variables:
     DOCKER_IO_PASSWORD: $DOCKER_IO_PASSWORD
     # Instruct TestContainers to use the daemon of DinD
-#    DOCKER_HOST: tcp://docker:2375
-#    DOCKER_DRIVER: overlay2
+    DOCKER_HOST: tcp://docker:2375
+    DOCKER_DRIVER: overlay2
   script:
-    - ./gradlew test build job --info
+    - gradle test build job --info
