--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ build:
     DOCKER_HOST: tcp://docker:2375
     DOCKER_DRIVER: overlay2
   script:
-    - gradle test build jib
+    - gradle test build jib -Djib.to.tags=${CI_COMMIT_SHORT_SHA}
 
 deploy:
   stage: deploy
