--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,5 +30,5 @@ deploy:
     - gcloud auth activate-service-account --key-file=key.json
     - gcloud container clusters get-credentials ${BEER_CLUSTER} --zone ${BEER_ZONE} --project ${BEER_K8S_PROJECT}
   script:
-    - kubectl set image deployment/beer-api beer-api=hives/beer-api:latest
+    - kubectl set image deployment/beer-api beer-api=hives/beer-api:${CI_COMMIT_SHORT_SHA}
     - kubectl get pods
